[package]
name = "simple_vault"
version = "0.1.0"
description = "Simple Insurance Fund Vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_vault"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
bytemuck = "1.4.0"
static_assertions = "1.1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }